<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestFlight</string>
    <string name="start_land">start/land</string>
    <string name="up">UP</string>
    <string name="left">left</string>
    <string name="forward">forward</string>
    <string name="rotate">rotate</string>
    <string name="right">right</string>
    <string name="connect">connect</string>
    <string name="down">DOWN</string>
    <string name="backward">backward</string>
    <string name="emergency">EMERG</string>

</resources>