<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".FullscreenActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/app_name"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_weight="0.7"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/BTrotate_left"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/rotate" />

                <Button
                    android:id="@+id/BTleft"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/left" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/BTforward"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/forward" />

                <Button
                    android:id="@+id/BTbackward"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/backward" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/BTright"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/right" />

                <Button
                    android:id="@+id/BTrotate_right"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:onClick="onButtonClick"
                    android:text="@string/rotate" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/BTconnect"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/connect" />

            <Button
                android:id="@+id/BTstart_land"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/start_land" />

            <Button
                android:id="@+id/BTemergency"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/emergency" />

            <Button
                android:id="@+id/BTup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/up" />

            <Button
                android:id="@+id/BTdown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onButtonClick"
                android:text="@string/down" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>